--- a/ms.tex
+++ b/ms.tex
@@ -139,7 +139,24 @@ BATMAN \citep{Kreidberg2015a}
 
 \begin{figure}
 \begin{center}
+\includegraphics[width=\columnwidth]{img/sphere_quad.pdf}
+\includegraphics[width=\columnwidth]{img/spherical_lc.pdf}
+\caption{A model generated using spherical harmonics}
+\label{fig:harmonics}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
 \includegraphics[width=\columnwidth]{img/zhang_lc.pdf}
+\caption{This is a caption}
+\label{fig:extract_region}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{img/zhang_lc_zoom.pdf}
 \caption{This is a caption}
 \label{fig:extract_region}
 \end{center}
