--- a/ms.tex
+++ b/ms.tex
@@ -137,7 +137,7 @@ Excitingly, it is possible to invert phase curves to give information on the lon
 
 \cite{Majeau2012} showed that as well as mapping longitudinally with phase curves, it is possible to get a two dimensional map of the dayside of an exoplanet from the secondary eclipse, provided that there is a non zero impact parameter. This technique works because the inclination of the system results in the occulting limb of the star scanning across the disc of the planet in both longitude and latitude during ingress and egress. The brightness distribution of the planet's permanent dayside will be imprinted on the precise shape of the ingress and egress curves.
 
-There appear to be, broadly, two classes of exoplanet atmospheres with regards to heat transport. $\mu$ Andromedae, HD\,179949b and HD\,209458b are all significantly hotter than HD\,189733b and display much higher temperature contrasts between the day and night sides, implying inefficient redistribution of energy. \citep{Harrington2006,Cowan2007,zellem2014}. WASP-43b is similarly an extremely hot Jupiter, so would be expected to have high temperature contrast between day and night sides. The primary and secondary eclipses of this planet, as well as the phase curve, have been measured with HST WFC3 and reported in \citep{Stevenson2014}, and these data will be reanalysed here.
+There appear to be, broadly, two classes of exoplanet atmospheres with regards to heat transport. $\mu$ Andromedae, HD\,179949b and HD\,209458b are all significantly hotter than HD\,189733b and display much higher temperature contrasts between the day and night sides, implying inefficient redistribution of energy. \citep{Harrington2006,Cowan2007,zellem2014}. WASP-43b is similarly an extremely hot Jupiter, so would be expected to have high temperature contrast between day and night sides. The primary and secondary eclipses of this planet, as well as the phase curve, have been measured with HST WFC3 and reported in \citep{Stevenson2014}, and these data will be re-analysed here.
 
 The high velocity winds transporting this energy have been predicted to be on the order of kilometers per second, which would leave a measurable imprint on the spectral absorption lines in the planets atmosphere through Doppler shifting \citep[e.g.][]{Showman2013}, and indeed, this effect has been observed in the transit of HD\,209458b \citep{Snellen2010} and HD\,189733b \citep{Louden2015}. 
 
@@ -147,8 +147,7 @@ General Circulation Models (GCM's), are currently the state of the art for predi
 
 An important early prediction of these GCM's was that hot, tidally locked Jupiter's would display significantly offset hotpots.
 
-An offset hotspot can be detected though the thermal phase-curve of the planet, as the point of maximum flux will be offset from the time of secondary transit by a measurable amount. This effect can also be mimicked by a high eccentricity (CITE?). 
-
+An offset hotspot can be detected though the thermal phase-curve of the planet, as the point of maximum flux will be offset from the time of secondary transit by a measurable amount. This effect can also be mimicked by a high eccentricity. 
 
 \citet{Zhang2016} showed that this behaviour could be captured with a simple analytical formalism.
 
@@ -156,43 +155,9 @@ BATMAN \citep{Kreidberg2015a}
 
 There does not currently exist an open source code for calculating secondary eclipses and phase curves in a self consistent way, \textsc{spiderman} is designed to fulfil this role, and it is is hoped that it will be of use to the community.
 
-\section{Method}\label{sec:method}
+\section{The model}\label{sec:the model}
 
-\begin{figure}
-\begin{center}
-\includegraphics[width=0.8\columnwidth]{img/frame1.pdf}
-\caption{Schematic representation of the planet grid. All sectors are equal area.}
-\label{fig:schematic}
-\end{center}
-\end{figure}
-
-\begin{figure}
-\begin{center}
-\includegraphics[width=\columnwidth]{img/precision.pdf}
-\caption{A comparison between a uniform flux distribution eclipse model generated with 400 segments and a single segment. If the integrator is correct, then there should be no difference between these two models. The bottom panel shows that the results are identical, apart from errors at the level of floating point precision (dotted lines) during ingress and egress.}
-\label{fig:precision}
-\end{center}
-\end{figure}
-
-\begin{figure}
-\begin{center}
-\includegraphics[width=\columnwidth]{img/sphere_quad.pdf}
-\caption{A model generated using spherical harmonics}
-\label{fig:harmonics}
-\end{center}
-\end{figure}
-
-
-\begin{figure}
-\begin{center}
-\includegraphics[width=\columnwidth]{img/both_lc.pdf}
-\includegraphics[width=\columnwidth]{img/both_lc_zoom.pdf}
-\caption{A close up of the secondary eclipse in figure \ref{fig:ex_lcs}. Note the different shape of the ingress and egress, caused by the asymmetry in the flux distribution on the planet.}
-\label{fig:ex_lcs}
-\end{center}
-\end{figure}
-
-\subsection{integrator design}\label{sec:integrator}
+\subsection{Integrator design}\label{sec:integrator}
 
 The model is designed so that an arbitrary brightness distribution can be used, and that the resulting phase curve and secondary eclipse lightcurves can be calculated rapidly and accurately. 
 
@@ -213,38 +178,72 @@ For example, if there are two collision points between the outer arc and the edg
 
 The advantage of this geometric approach is that the planet can be described by a small number of regions with no loss in numerical precision, enabling eclipses and phase curves to be calculated extremely rapidly.
 
-\subsection{Integrator validation}\label{sec:numerical}
-
-\subsection{Flux conversions}\label{sec:flux conversions}
-
-\subsection{Stellar models}\label{sec:stellar models}
-
-\subsection{Performance}\label{sec:performance}
-
-In typical usage, SPIDERMAN is capable of producing over 1000 models per second on a single core. This means that a 1 million MCMC sample can be generated in approximately a quarter of an hour.
-
-The performance tests were carried out on a single core of an Intel Core I5-3470 Processor.
-
 \begin{figure}
 \begin{center}
-\includegraphics[width=\columnwidth]{img/exec_time.pdf}
-\caption{The speed with which a model with 1000 timepoints can be generated}
-\label{fig:exec_time}
+\includegraphics[width=0.8\columnwidth]{img/frame1.pdf}
+\caption{Schematic representation of the planet grid. All sectors are equal area.}
+\label{fig:schematic}
 \end{center}
 \end{figure}
 
-\subsection{Available models}\label{sec:ttof}
+\subsection{Integrator validation}\label{sec:numerical}
 
+To test that the integrator is working correctly, a simple test was conducted. Assuming a uniform brightness distribution, the number of sections that the planet is broken into for the integration should have zero impact on the final light-curve. With a large number of segments and time points, all geometrical cases will be met, and it will quickly become obvious if there is a mistake in how the areas have been calculated.
+
+We compare the case of a single segment model, i.e., a circle, for which there is a single analytical solution to the area blocked by another circle, to one with 400 segments. In both cases the planet is assumed to have a total luminosity that is 1\% that of the star's.
+
+A lightcurve is calculated for each of these cases, and then the difference is taken. The results of this test can be seen in figure \ref{fig:precision}, where it is clear that there is no difference between the two lightcurves greater than floating point precision (2.22e-16). We therefore consider the geometric integrator of \textsc{spiderman} to be validated.
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{img/precision.pdf}
+\caption{A comparison between a uniform flux distribution eclipse model generated with 400 segments and a single segment. If the integrator is correct, then there should be no difference between these two models. The bottom panel shows that the results are identical, apart from errors at the level of floating point precision (dotted lines) during ingress and egress.}
+\label{fig:precision}
+\end{center}
+\end{figure}
+
+\subsection{The temperature model}\label{sec:temp model}
+
+While \textsc{spiderman} has several different ways to model the 
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{img/both_lc.pdf}
+\includegraphics[width=\columnwidth]{img/both_lc_zoom.pdf}
+\caption{A close up of the secondary eclipse in figure \ref{fig:ex_lcs}. Note the different shape of the ingress and egress, caused by the asymmetry in the flux distribution on the planet.}
+\label{fig:ex_lcs}
+\end{center}
+\end{figure}
+
+Spherical projection:
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{img/sphere_quad.pdf}
+\caption{A model generated using spherical harmonics}
+\label{fig:harmonics}
+\end{center}
+\end{figure}
 
 \subsection{Temperature to fluxes}\label{sec:ttof}
 
 Some physical models, such as the one adapted from \citep{Zhang2016} are defined in terms of temperature, where of course the observable that is being fit for is the emitted flux. Therefore, it is necessary
 
-If we make the assumption that the temperature distribution maps to the \emph{brightness temperature} distribution, then we can recover these fluxes. This will be valid for narrow
+If we make the assumption that the temperature distribution maps to the \emph{brightness temperature} distribution, then we can recover these fluxes. This will be valid for band passes that are narrower than potentially strong molecular bands in the spectrum, such as water or carbon monoxide, but this assumption may introduce systematic errors into very wide band-passes.
 
 An additional factor that is not currently considered by the model but will be featured in future releases of the code is to also include the ability for the user to define instrument response functions as a function of wavelength.
 
-\subsection{}\label{sec:ttof}
+\subsection{Stellar model}\label{sec:stellar model}
+
+Since the shape and depth of an eclipse and phase curve are determined by the \emph{ratio} of the fluxes between the two bodies, lightcurves can comfortably be fit by very unphysical planet and star fluxes, so long as the ratio between them is of the right order, and there will clearly be an enormous degeneracy between the planet and star brightness.
+
+In order to recover any useful physical parameters of the planet, it is necessary to place constraints on the \emph{absolute} scale or brightness of the system.
+
+Both planets and stars, of course, do not act exactly like ideal black-body radiators. For the planet the brightness temperature, or the temperature of a perfect blackbody emitting the same amount of flux within a bandpass, is a widely used convention, and is the direct observable.
+
+For the star however, we can do better than this. From high resolution spectroscopy and stellar modelling, there are often good constraints on the effective temperature and surface gravity of the star, and therefore the stellar type.
+
+\textsc{spiderman} models the absolute luminosity of the star.
 
 \section{The \textsc{spiderman} package}\label{sec:package}
 
@@ -293,19 +292,34 @@ will generate a plot like figure \ref{fig:plot_system}, which is a scale diagram
 
 \textsc{spiderman} has been designed to ensure that it is easy to visualise the appearance of the model at all stages.
 
-\section{Application to data}\label{sec:Observations}
+\subsection{Performance}\label{sec:performance}
 
-As a test of the performance of the code the model was applied to a phase curve and secondary eclipse of WASP-43b taken with HST WFC3. These data had previously been published in \citet{Stevenson2014}. However, in this paper the phase curve and the secondary eclipse are treated as seperate phenomena, when of course, they are both manifestations of the same underlying brightness distribution. Indeed, the bright dayside of the planet is the main driver of the phase curve, and is also the part occulted by the stellar disc. It is therefore more parsimonious, if at all possible, to use a model that accounts for both of these observations simultaneously. This also reduces the total number of paramters needed, which is satisfying from an information content angle.
+In typical usage, SPIDERMAN is capable of producing over 1000 models per second on a single core. This means that a 1 million MCMC sample can be generated in approximately a quarter of an hour.
+
+The performance tests were carried out on a single core of an Intel Core I5-3470 Processor.
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{img/exec_time.pdf}
+\caption{The speed with which a model with 1000 timepoints can be generated}
+\label{fig:exec_time}
+\end{center}
+\end{figure}
+
+\subsection{Available models}\label{sec:ttof}
+
+
+\section{Application to data}\label{sec:Application}
+
+As a test of the performance of the code the model was applied to a phase curve and secondary eclipse of WASP-43b taken with HST WFC3. These data had previously been published in \citet{Stevenson2014}. However, in this paper the phase curve and the secondary eclipse are treated as separate phenomena, when of course, they are both manifestations of the same underlying brightness distribution. Indeed, the bright dayside of the planet is the main driver of the phase curve, and is also the part occulted by the stellar disc. It is therefore more parsimonious, if at all possible, to use a model that accounts for both of these observations simultaneously. This also reduces the total number of parameters needed, which implies a better information content.
 
 One could argue that planetary limb darkening, among other effects, will act to decouple the secondary eclipse from the phase curve, and there are not good constraints on what to expect from the limb darkening as it requires a full atmosphere model treatment. \textsc{spiderman} does have the option to include planetary limb darkening, which would allow one to marginalise over the uncertainty in these parameters. 
 
 In principle, constraints being placed on the limb darkening can constrain the vertical temperature profile of the planet, however this would require a full radiative transfer treatment of the planet.
 
-WASP-43b appears to have a near isothermal profile \citep{Stevenson2014}, which should correspond to a zero limb darkening. However, as I show in section X. there is a preference in the fit for a \emph{limb brightened profile} which may indicate the presence of a weak thermal inversion layer, or may simply be due to oversimplifications in the model fit.
+WASP-43b appears to have a near isothermal profile \citep{Stevenson2014}, which should correspond to a zero limb darkening. However, as discussed in \ref{sec:discussion}, I will show there is a preference in the fit for a \emph{limb brightened profile} which may indicate the presence of a weak thermal inversion layer, or may simply be due to oversimplifications in the model fit.
 
-During the MCMC fit I place the constraint that the limb darkening must be monotonic across the disc of the planet, i.e., there can be no change in the sign of the gradient. This results in profiles that are either flat, wholly limb darkened or wholly limb brightened, with no non-physically flexible profiles.
-
-\section{Systematics model}\label{sec:systematics}
+\subsection{Systematics model}\label{sec:systematics}
 
 As with most exoplanet observations with Hubble, the data are effected by the idiosyncratic systematic errors of the instrument. Fortunately, the sources of these errors are relatively well understood, and are generally quite repeatable between observations. They are therefore quite straightforward to fit for and remove. 
 
@@ -316,41 +330,41 @@ In this study, three visits, each with 12 orbits was used to cover the full phas
 The systematics model we use to fit WASP-43 is the same that was used in the previous treatment \citep{Stevenson2014}.
 
 In brief, there are three components to the systematics model:
-
-1. Scan direction offset
+\subsection*{1.) Scan direction offset}
 
 There is an offset in the recorded flux depending on which way the the ccd was scanning during the readout, in one half of exposures the scan direction is in the same direction as the readout, and in the other half it is the offset. This leads to a very repeatable offset in the fluxes between the two scan directions, which can be captured with a single parameter \emph{scale}
 
-2. Orbit long "hook effect"
+\subsection*{2.) Orbit long ``hook effect''}
 
-Each orbit displays a characteristic exoplential "hook" signal, which can be modelled as
-
+Each orbit displays a characteristic exoplential ``hook'' signal, which can be modelled as
 \begin{equation} \label{eq:hook}
 F_{cor} = F*(1-exp(-r1 t_{orb}-r2-r3 \delta_{fo}))
 \end{equation}
-
 Where $F$ is the flux before correction and $F_{cor}$ is the corrected flux $t_{orb}$ is the time from the start of each \emph{obit}, $r1$, $r2$, $r3$ are the fitted coefficients. This exponential ramp has a different shape during the first orbit of a visit, so the $\delta_{fo}$ function takes a value of 1 if the orbit is the first, and 0 at all other times.
 
 The exponential hook shape is believed to be related to charge trapping, and is a characteristic and repeatable feature across orbits, so these parameters are fit simultaneously over visits.
 
-3. A visit long slope. 
+\subsection*{3.) Visit long slope. }
 
-Each \emph{visit} displays a decreasing slope, which is modelled as a second order polynomial. The cause of these features is unknown, and they have not been linked to any physical parameters of the telescope \cite{Wakeford2016}. Here, they are also likely blended with the "Breathing" systematics of the instrument, which are caused by the changing thermal environment of the telescope during its orbit changing the focal length of the instrument. The shape of these visit long effects is slightly different between the three visits used here, so the three paramters of the polynomial are fit seperately for the three visits.
+Each \emph{visit} displays a decreasing slope, which is modelled as a second order polynomial. The cause of these features is unknown, and they have not been linked to any physical parameters of the telescope \cite{Wakeford2016}. Here, they are also likely blended with the ``Breathing" systematics of the instrument, which are caused by the changing thermal environment of the telescope during its orbit changing the focal length of the instrument. The shape of these visit long effects is slightly different between the three visits used here, so the three paramters of the polynomial are fit seperately for the three visits.
 
 The feature that is the greatest cause for concern is the visit long slope in the data, as this has a comparable timescale and amplitude to the planets phase curve, so there is potential for serious degeneracies between the systematics and the physical model.
 
-Fortunately, the phasing of the observations is such that the three visits cover very different ranges of the phase curve, which does tend to alleviate the degeneracy. As can be seen in the large corner plot in figure \ref{fig:big triangle}, these parameters are still degenerate with the physical model parameters, in particular the $\xi$ paramter which controls the phase curve shape, but the constraints placed on these parameters are still useful, and marginalising over the systematics parameters with the MCMC should remove any doubt that the results are only an artefact.
+Fortunately, the phasing of the observations is such that the three visits cover very different ranges of the phase curve, which does tend to alleviate the degeneracy. As can be seen in the large corner plot in figure \ref{fig:big triangle}, these parameters are still degenerate with the physical model parameters, in particular the $\xi$ paramter which controls the phase curve shape, but the constraints placed on these parameters are still useful, and marginalising over the systematics parameters with the MCMC should remove any doubt that the results are only an artefact.\\
 
-Future analysis of this dataset could use a Gaussian process noise model instead of the parametrised one featured here, as used in (REF), this could provide further confidence in the results, as the added flexibility of the GP model and the explicit fit for the timescale of the features would allow the degeneracy to be explored with fewer explicit hyper-parameters.
+Future analysis of this dataset could use a Gaussian process noise model instead of the parametrised one featured here, as used in \citet{Gibson2012a}, this could provide further confidence in the results, as the added flexibility of the GP model and the explicit fit for the timescale of the features would allow the degeneracy to be explored with fewer explicit hyper-parameters.
 
-\begin{figure*}
-\begin{center}
-\includegraphics[width=0.8\textwidth]{img/systematics.pdf}
-\caption{Top: raw data from HST, the systematic components are all visible. second panel shows the physical model fit (red) and the systematic model (blue). The third panel shows the model fit to the data with the systematic noise component removed, the fourth panel is the residuals of the fit.
-}
-\label{fig:systematics}
-\end{center}
-\end{figure*}
+\subsection{MCMC}\label{sec:MCMC}
+
+The only way to properly access the errors on the parameter values of interest, and test for degeneracies
+
+During the MCMC fit I place the constraint that the limb darkening must be monotonic across the disc of the planet, i.e., there can be no change in the sign of the gradient. This results in profiles that are either flat, wholly limb darkened or wholly limb brightened, with no non-physically flexible profiles.
+
+For both models, the MCMC was run for 10 million steps, with the first 200,000 steps were discarded as burn in.
+
+\subsection{Results}\label{sec:results}
+
+In table \ref{tab:results}
 
 \begin{figure}
 \begin{center}
@@ -360,30 +374,6 @@ Future analysis of this dataset could use a Gaussian process noise model instead
 \end{center}
 \end{figure}
 
-\begin{figure*}
-\begin{center}
-\includegraphics[width=\columnwidth]{img/free_parametersflux_map.pdf}
-\includegraphics[width=\columnwidth]{img/free_parametersflux_errs.pdf}
-\caption{left: right: the constraints on the brightness distribution.}
-\label{fig:best_fit_flux}
-\end{center}
-\end{figure*}
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=\columnwidth]{img/free_parameterstemp_map.pdf}
-\includegraphics[width=\columnwidth]{img/free_parameterstemp_errs.pdf}
-\caption{The underlying temperature distributions generated by the zhang model.}
-\label{fig:best_fit_temp}
-\end{center}
-\end{figure*}
-
-\section{MCMC}\label{sec:MCMC}
-
-To investigate the correlation between the
-
-In table \ref{tab:results}
-
 \begin{figure}
 \begin{center}
 \includegraphics[width=\columnwidth]{img/free_parameterstriangle.pdf}
@@ -391,30 +381,6 @@ In table \ref{tab:results}
 \label{fig:triangle corner sub}
 \end{center}
 \end{figure}
-
-\begin{figure}
-\begin{center}
-\includegraphics[width=\columnwidth]{img/model.pdf}
-\caption{the uncertainty on the model from the MCMC fit. There is a greater than 3 sigma detection of night-side flux.}
-\label{fig:model}
-\end{center}
-\end{figure}
-
-\begin{figure}
-\begin{center}
-\includegraphics[width=\columnwidth]{img/ld_prof.pdf}
-\caption{The 1 sigma and 3 sigma contours for the Radial intensity profile of the planet, indicating that the fit has a significant preference for limb brightened profiles }
-\label{fig:limb brighten}
-\end{center}
-\end{figure}
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=\textwidth]{img/huge_triangle.pdf}
-\caption{stupidly big triangle plot1}
-\label{fig:big triangle}
-\end{center}
-\end{figure*}
 
 \begin{center}
 \begin{table*}{
@@ -461,26 +427,81 @@ $T_s$ &         4530 & $\pm$         120 &         4530 & $\pm$         120 & K\
 \end{table*}
 \end{center}
 
-\section{Discussion}\label{sec:Discussion}
+\begin{figure*}
+\begin{center}
+\includegraphics[width=\columnwidth]{img/free_parametersflux_map.pdf}
+\includegraphics[width=\columnwidth]{img/free_parametersflux_errs.pdf}
+\caption{left: right: the constraints on the brightness distribution, for the model where the planetary limb darkening was switched off.}
+\label{fig:best_fit_flux}
+\end{center}
+\end{figure*}
 
-\subsection{Future work}\label{sec:future work}
+\begin{figure*}
+\begin{center}
+\includegraphics[width=\columnwidth]{img/free_parameterstemp_map.pdf}
+\includegraphics[width=\columnwidth]{img/free_parameterstemp_errs.pdf}
+\caption{The underlying temperature distributions generated by the zhang model.}
+\label{fig:best_fit_temp}
+\end{center}
+\end{figure*}
+
+\subsection{Discussion}\label{sec:Discussion}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{img/model.pdf}
+\caption{the uncertainty on the model from the MCMC fit. There is a greater than 3 sigma detection of night-side flux.}
+\label{fig:model}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{img/ld_prof.pdf}
+\caption{The 1 sigma and 3 sigma contours for the Radial intensity profile of the planet, indicating that the fit has a significant preference for limb brightened profiles }
+\label{fig:limb brighten}
+\end{center}
+\end{figure}
+
+\section{Future work}\label{sec:future work}
 
 \textsc{spiderman} is still under development, and there are a number of features that are planned to be implemented:
 
-- More thermal brightness distributions, such as orange segments and a simple parameterised hotspot (etc?)
-- Implement \emph{reflected} light phase curves and secondary eclipses, through adding appropriate brightness distributions like Lambertian reflectors and patchy clouds.
-- Allow calculation of multiple spectral channels simultaneously, with linked system parameters.
-- Include instrument response in calculating flux ratios
-- Better treatment of errors in the spectral energy distribution of the star - include errors in log-g and Metalicity
+\begin{itemize}
+\item More thermal brightness distributions, such as an "orange segments" model and a simple parametrised hotspot which can be offset in latitude and longitude
+\item Implement \emph{reflected} light phase curves and secondary eclipses, through adding appropriate brightness distributions like Lambertian reflectors and patchy clouds.
+\item Allow calculation of multiple spectral channels simultaneously, with linked system parameters.
+\item Include instrument response in calculating flux ratios
+\item Better treatment of errors in the spectral energy distribution of the star - include errors in log-g and Metalicity
+\end{itemize}
 
-In regards to the re-analysis of WASP-43bs phase curve, future analysis will focus on
+In regards to the re-analysis of WASP-43bs phase curve, future analysis will focus on:
 
-- Confirming the detected flux on the nightside is a real feature and not an artefact
-- Further test for degeneracies between HST systematics and the physical model of the phase curve, in particular the combination of visit long slope and breathing modes. This could be accomplished by a Gaussian process analysis.
-- Perform recovery with a non-informative model, such as spherical harmonics, and see if the recovered brightness or temperature maps are the same as recovered through physical models.
-- Investigating the apparent preference for limb brightened profiles in the model fit. This may be evidence of
+\begin{itemize}
+\item Confirming the detected flux on the nightside is a real feature and not an artefact
+\item Further test for degeneracies between HST systematics and the physical model of the phase curve, in particular the combination of visit long slope and breathing modes. This could be accomplished by a Gaussian process analysis.
+\item Perform recovery with a non-informative model, such as spherical harmonics, and see if the recovered brightness or temperature maps are the same as recovered through physical models.
+\item Investigating the apparent preference for limb brightened profiles in the model fit. This is characteristic of a temperature inversion, but since there is no evidence for this in other data on WASP-43b it may be more likely that it indicates a weakness of the model.
+\item Making wavelength resolved maps. This will allow spectra as a function of latitude and longitude to be created. The wavelength also functions as a proxy for height in a planetary atmosphere, so the map will effectively be three dimensional.
+\item Investigate correlations between spectrally resolved bins and consider the impact of simultaneous fits.
+\end{itemize}
 
-\section{Conclusions}
+\begin{figure*}
+\begin{center}
+\includegraphics[width=0.8\textwidth]{img/systematics.pdf}
+\caption{Top: raw data from HST, the systematic components are all visible. second panel shows the physical model fit (red) and the systematic model (blue). The third panel shows the model fit to the data with the systematic noise component removed, the fourth panel is the residuals of the fit.
+}
+\label{fig:systematics}
+\end{center}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+\includegraphics[width=\textwidth]{img/huge_triangle.pdf}
+\caption{stupidly big triangle plot1}
+\label{fig:big triangle}
+\end{center}
+\end{figure*}
 
 \section*{Acknowledgements}
 
